fix layout for table overflow

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -175,7 +175,7 @@ html {
 body {
   font-family: 'Regular', sans-serif;
   color: black;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   p,
   span,
   div {
